2006-01-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sets.tcl: Fixed [SF Tcllib Bug 1414051], brought implementation
	  of 'include' into sync with documentation. Behaving like
	  'lappend' means that we have to create the variable if it does
	  not exist. Thanks to michael Schlenker <mic42@users.sf.net>.
	* sets.test: Corrected the testsuite as well.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* matrix1.test: Replaced [aget] with usage of the standard
	* matrix.test:  [dictsort]. Moved helper commands out of the
	  testsuites proper into a supporting file.

	* graph1.test: Fixed duplicate usage of test names.
	* list.test:   
	* matrix.test: 
	* matrix1.test: 
	* stack.test: 
	* tree1.test: 

2006-01-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test: More boilerplate simplified via use of test support.
	* graph1.test:
	* list.test:
	* matrix.test:
	* matrix1.test:
	* pool.test:
	* prioqueue.test:
	* queue.test:
	* record.test:
	* sets.test:
	* skiplist.test:
	* stack.test:
	* tree.test:
	* tree1.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.test: Hooked into the new common test support code.
	* graph1.test:
	* list.test:
	* matrix.test:
	* matrix1.test:
	* pool.test:
	* prioqueue.test:
	* queue.test:
	* record.test:
	* sets.test:
	* skiplist.test:
	* stack.test:
	* tree.test:
	* tree1.test:

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* pool.test: New file. Structured tests.
	* pooltest.tcl: Removed unstructured tests.

	* tree.test: Fixed [SF Tcllib Bug 1316061]. Uncluttering test
	  output.

2005-11-02  Andreas Kupries <andreask@activestate.com>

	* graph.tcl (::struct::graph::_serialize): Fixed bug mishandling
	  the serialization of arcs with spaces in their names. Thanks to
	  Spyros Potamianos <spotam@users.sourceforge.net> for bug report
	  and fix. [SF Tcllib Bug 1345967]

2005-10-27  Andreas Kupries <andreask@activestate.com>
