@@ -19,7 +19,7 @@ package ifneeded struct::tree      2.1   [list source [file join $dir tree.tcl]]
 package ifneeded struct::matrix    2.0.1 [list source [file join $dir matrix.tcl]]
 package ifneeded struct::pool      1.2.1 [list source [file join $dir pool.tcl]]
 package ifneeded struct::record    1.2.1 [list source [file join $dir record.tcl]]
-package ifneeded struct::list      1.5   [list source [file join $dir list.tcl]]
+package ifneeded struct::list      1.6   [list source [file join $dir list.tcl]]
 package ifneeded struct::set       2.1   [list source [file join $dir sets.tcl]]
 package ifneeded struct::prioqueue 1.3.1 [list source [file join $dir prioqueue.tcl]]
 package ifneeded struct::skiplist  1.3   [list source [file join $dir skiplist.tcl]]
